2009-03-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): ensure the values
	meant to construct the custom recurrence rule are consistent.

	* UI/Scheduler/UIxCalMainView.m: if the module settings key
	exists, do not reset it.

2009-03-24  Ludovic Marcotte <lmarcotte@inverse.ca>

	* UI/MailerUI/UIxMailListView.m
	([UIxMailListView messages)]:
	Adjusted the sort so it's a little bit faster
	and correctly work in case the server returns us
	the FETCH response in an order different that what
	we asked for.

2009-03-24  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -invalidateLanguage]):
	new method to invalidate the language ivar.	

	* UI/MainUI/SOGoRootPage.m ([SOGoRootPage -connectAction]): must
	invalidate user's language ivar when it changes.

	* SoObjects/SOGo/SOGoCache.m ([SOGoCache
	-_userDefaultsHaveChanged:]): must invalidate the user's language
	ivar when the defaults change.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:forObject:previousObject:toAttendees:]):
	no longer send a deletion notification to an attendee who already
	declined the meeting.

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -_eventObjectWithUID:forUser:]): when
	looking for an event for a specific user, we now search into all
	the user's calendar folders. 

	* UI/MailPartViewers/UIxMailPartICalViewer.m
	([UIxMailPartICalViewer -startCalendarDate]): new method that returns
	the start date with the proper timezone.
	([-endCalendarDate]): idem for the end date.
	([-startDate]): new method that returns a formatted string of the
	start date.
	([-endDate]): idem for the end date. Also take care of all-day events.
	([-startTime]): new method that returns a formatted string ot the
	start time.
	([-endTime]): idem for the end time.